# FrameAnimationLoader

./: .gitignore  README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/phoche/frameanimationloader/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/bolo/os_application/: ConvertImageFilter.kt  OsApplication.kt
app/src/main/java/com/example/bolo/os_application/loader/: CustomAnimationDrawable.java  FrameAnimLoader.java  FrameImageView.java  FrameLoader.kt  OSAppGlideModule.kt
app/src/main/java/com/example/bolo/os_application/media/: IMediaController.java  IRenderView.java  SurfaceRenderView.java  TextureRenderView.java  VideoView.java
app/src/main/java/com/example/bolo/os_application/media/helper/: MeasureHelper.java
app/src/main/java/com/example/bolo/os_application/media/player/: AbstractMediaPlayer.java  AndroidMediaPlayer.java  IJkMediaPlayer.java  IMediaPlayer.java
app/src/main/java/com/example/bolo/os_application/permission/: PermissionCheckHelper.java  PermissionRequestInfo.java
app/src/main/java/com/example/bolo/os_application/ui/: BaseActivity.kt  HandleImageActivity.kt  HandleImageTestActivity.kt  HandleVideoActivity.kt  LoadingDialog.kt  MainActivity.kt  PermissionHandlerActivity.java  VideoPlayerActivity.kt
app/src/main/java/com/example/bolo/os_application/utils/: bitmap.kt  file.kt  log.kt  toast.kt  view.kt
app/src/main/java/com/phoche/frameanimationloader/: CustomAnimationDrawable.java  FrameAnimLoader.java  FrameImageView.java  MainActivity.java
app/src/main/res/layout/: activity_handle_image.xml  activity_handle_image_test.xml  activity_handle_video.xml  activity_main.xml  activity_video_player.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/test/java/com/phoche/frameanimationloader/: ExampleUnitTest.java
ffmpeglibrary/: CMakeLists.txt  build.gradle
ffmpeglibrary/libs/include/: cmdutils.c  config.h  ffmpeg.c
ffmpeglibrary/libs/include/libavcodec/: codec_list.c  libavcodec.pc
ffmpeglibrary/libs/include/libavfilter/: libavfilter.pc
ffmpeglibrary/libs/include/libavformat/: libavformat.pc
ffmpeglibrary/libs/include/libavutil/: libavutil.pc
ffmpeglibrary/libs/include/libswresample/: libswresample.pc
ffmpeglibrary/libs/include/libswscale/: libswscale.pc
ffmpeglibrary/src/main/: AndroidManifest.xml
ffmpeglibrary/src/main/cpp/: native-lib.cpp
ffmpeglibrary/src/main/java/com/bolo/ffmpeglibrary/: FFmpegUtil.java
ffmpeglibrary/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
